clusters/proxmox-home/apps/privatebin/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: privatebin
  labels:
    app.kubernetes.io/name: privatebin
    app.kubernetes.io/component: namespace
