clusters/proxmox-home/apps/privatebin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: privatebin
  namespace: privatebin
  labels:
    app.kubernetes.io/name: privatebin
    app.kubernetes.io/component: deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: privatebin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: privatebin
    spec:
      securityContext:
        fsGroup: 82
      containers:
        - name: privatebin
          image: privatebin/nginx-fpm-alpine:1.7.4
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /srv/data
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              memory: 128Mi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: privatebin
