clusters/proxmox-home/apps/privatebin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: privatebin
  namespace: privatebin
  labels:
    app.kubernetes.io/name: privatebin
    app.kubernetes.io/component: service
spec:
  selector:
    app.kubernetes.io/name: privatebin
  ports:
    - name: http
      port: 80
      targetPort: http
