clusters/proxmox-home/apps/privatebin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: privatebin-ingress
  namespace: privatebin
  labels:
    app.kubernetes.io/name: privatebin-ingress
    app.kubernetes.io/component: ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - paste.mgsds.com
      secretName: paste.mgsds.com-tls
  rules:
    - host: paste.mgsds.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: privatebin
                port:
                  number: 80
